# WhoseQuestIsItAnyway

./: CMakeLists.txt  CMakePresets.json  README.md  WhoseQuestIsItAnyway.vcxproj  WhoseQuestIsItAnyway.vcxproj.filters  exports.def  vcpkg.json  version.rc
cmake/ports/autotoml/: portfile.cmake  vcpkg.json
data/Data/Interface/Translations/: WhoseQuestIsItAnyway_english.txt  WhoseQuestIsItAnyway_french.txt
data/Data/SKSE/Plugins/: WhoseQuestIsItAnyway.toml
include/: NotificationManager.h  Settings.h  version.h
src/: CMakeLists.txt  Hooks.cpp  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  PCH.h  Settings.cpp  Settings.h  main.cpp
